[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bsky"
authors = [{name = "Jeremie Miller", email = "jeremie.miller@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
]
dynamic = ["version", "description"]
dependencies = [
    "atproto>=0.0.17"
]

[project.urls]
Home = "https://github.com/quartzjer/bsky"
